--- a/blog/templates/blog_list.html
+++ b/blog/templates/blog_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static%}
 {% block content %}
 <div>
     <button type="button">Add New Blog</button>
@@ -6,4 +7,5 @@
 <div>
     BLOGS
 </div>
+<script src="{% static 'js/blog.js' %}"></script>
 {% endblock %}
