--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -13,9 +13,11 @@
   </head>
   <body>
     <header>
-      <h1 class="blog-head">My Blog Site</h1>
       {% if user.is_authenticated %}
         <a href="{% url 'logout' %}?next=/">logout</a>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+          Add Blog
+        </button>
       {% else %}
         <a href="{% url 'login' %}">login</a> / <a href="{% url 'signup' %}">signup</a>
       {% endif %}
