--- a/blog/templates/blog_list.html
+++ b/blog/templates/blog_list.html
@@ -1,11 +1,35 @@
 {% extends 'base.html' %}
 {% load static%}
 {% block content %}
-<div>
-    <button type="button">Add New Blog</button>
+<div class="jumbotron text-center">
+  <h1>YOUR BLOGS</h1>
 </div>
-<div>
-    BLOGS
+<div class="container">
+  <div class="row" id="blog_list">
+  </div>
+</div>
+<div class="modal" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Modal Heading</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+
+      <!-- Modal body -->
+      <div class="modal-body">
+        Modal body..
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+
+    </div>
+  </div>
 </div>
 <script src="{% static 'js/blog.js' %}"></script>
 {% endblock %}
