--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -10,19 +10,21 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <title class="align-items-center">{% block title %}My Blog{% endblock %}</title>
+    {% block style %}{% endblock %}
   </head>
   <body>
-    <header>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+      <a class="navbar-brand" href="#">BLOG</a>
       {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}?next=/">logout</a>
+        <a href="{% url 'logout' %}?next=/" class="navbar-brand">Logout</a>
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
           Add Blog
         </button>
       {% else %}
-        <a href="{% url 'login' %}">login</a> / <a href="{% url 'signup' %}">signup</a>
+        <a href="{% url 'login' %}" class="navbar-brand">Login</a>
+      <a href="{% url 'signup' %}" class="navbar-brand">Signup</a>
       {% endif %}
-      <hr>
-    </header>
+    </nav>
     <main>
       {% block content %}
       {% endblock %}
