--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -17,7 +17,7 @@
                   {% if form.errors %}
                     <p style="color: red">Your username and password didn't match. Please try again.</p>
                   {% endif %}
-                  <form method="post">
+                  <form method="post" style="padding-left: 111px;">
                     {% csrf_token %}
                     <input type="hidden" name="next" value="{{ next }}" />
                     {% for field in form %}
