--- a/blog/templates/signup.html
+++ b/blog/templates/signup.html
@@ -17,7 +17,7 @@
                     <form method="post">
                       {% csrf_token %}
                       {{ form.as_p }}
-                      <button type="submit">Sign up</button>
+                      <button type="submit" style="margin-left: 150px;">Sign up</button>
                     </form>
                 </div>
             </div>
